syntax = "proto3";
package isuxportal.proto.services.bench;
option go_package = "github.com/isucon/isucon10-portal/proto/services/bench";

import "isuxportal/resources/benchmark_result.proto";

service BenchmarkReport {
  rpc ReportBenchmarkResult(stream ReportBenchmarkResultRequest) returns (stream ReportBenchmarkResultResponse);
}

message ReportBenchmarkResultRequest {
  int64 job_id = 1;
  string handle = 2;
  int64 nonce = 3;
  isuxportal.proto.resources.BenchmarkResult result = 4;
}

message ReportBenchmarkResultResponse {
  int64 acked_nonce = 1;
}
